--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -11,6 +11,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
+<head>
+<style>
+#employeesTable {
+  font-family: "Raleway", "Raleway", sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#employeesTable td, #employeesTable th {
+  border: 1.5px solid #ddd;
+  padding: 8px;
+}
+
+#employeesTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#employeesTable tr:hover {background-color: #ddd;}
+
+#employeesTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #1A1A1A;
+  color: white;
+}
+</style>
+</head>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
@@ -25,14 +51,37 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 
 <div id="employees">
+<table id="employeesTable">
+  <tr>
+    <th>Id</th>
+    <th>Name</th>
+    <th>E-mail</th>
+    <th>Job</th>
+    <th>Salary</th>
+    <th>Employment Status</th>
+    <th>Show Individual</th>
+  </tr>
+
+  <% @employees = Employee.all%>
+
   <% @employees.each do |employee| %>
-    <%= render employee %>
+    <tr>
+    <td><%= employee.id %></td>
+    <td><%= employee.name %></td>
+    <td><%= employee.email %></td>
+    <td><%= employee.job %></td>
+    <td><%= employee.salary %></td>
+    <td><%= employee.employment_status %></td>
+    <td>
     <p>
       <%= link_to "Show this employee", employee %>
-    </p>
+    </p></td>
+    </tr>
+    
   <% end %>
+  </table>
 </div>
-
+<br>
 <a href='http://localhost:3000/employees/new' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>New Employee</a>
 <br>
 <br>
