--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -11,9 +11,35 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
+<head>
+<style>
+#missionsTable {
+  font-family: "Raleway", "Raleway", sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#missionsTable td, #missionsTable th {
+  border: 1.5px solid #ddd;
+  padding: 8px;
+}
+
+#missionsTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#missionsTable tr:hover {background-color: #ddd;}
+
+#missionsTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #1A1A1A;
+  color: white;
+}
+</style>
+</head>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
+<div class="w3-main" style="margin-left:50px">
 
 
   <!-- Header -->
@@ -23,14 +49,40 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <p style="color: green"><%= notice %></p>
 
 <div id="missions">
+<table id="missionsTable">
+  <tr>
+    <th>Id</th>
+    <th>Title</th>
+    <th>Description</th>
+    <th>Start Date</th>
+    <th>Finish Date</th>
+    <th>Attribute</th>
+    <th>Team</th>
+    <th>Status</th>
+    <th>Show Individual</th>
+  </tr>
+  <%@missions = Mission.all %>
   <% @missions.each do |mission| %>
-    <%= render mission %>
+  <tr>
+    <td><%= mission.id %></td>
+    <td><%= mission.title %></td>
+    <td><%= mission.description %></td>
+    <td><%= mission.startDate %></td>
+    <td><%= mission.finishDate %></td>
+    <td><%= mission.attribut %></td>
+    <td><%= mission.team %></td>
+    <td><%= mission.status %></td>
+    <td>
     <p>
-      <%= link_to "Show this mission", mission %>
+      <%= link_to "Show this target", mission %>
     </p>
+    </td>
+    </tr>
+    
   <% end %>
+  </table>
 </div>
-
+<br>
 
 <a href='http://localhost:3000/missions/new' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>New target</a>
 <br>
