--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -11,6 +11,32 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </style>
 <body class="w3-light-grey w3-content" style="max-width:1600px">
 
+<head>
+<style>
+#teamTable {
+  font-family: "Raleway", "Raleway", sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#teamTable td, #teamTable th {
+  border: 1.5px solid #ddd;
+  padding: 8px;
+}
+
+#teamTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#teamTable tr:hover {background-color: #ddd;}
+
+#teamTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #1A1A1A;
+  color: white;
+}
+</style>
+</head>
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
@@ -25,15 +51,36 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 
 <div id="teams">
+<table id="teamTable">
+  <tr>
+    <th>Id</th>
+    <th>Name</th>
+    <th>Description</th>
+    <th>Members</th>
+    <th>Team Leader</th>
+    <th>Show Individual</th>
+  </tr>
+
+  <% @teams = Team.all%>
+
   <% @teams.each do |team| %>
-    <%= render team %>
+  <tr>
+    <td><%= team.id %></td>
+    <td><%= team.name %></td>
+    <td><%= team.description %></td>
+    <td><%= team.members %> </td>
+    <td><%= team.team_lead %> </td>
+    <td>
     <p>
       <%= link_to "Show this team", team %>
     </p>
+    </td>
+    </tr>
   <% end %>
+  </table>
 </div>
 
-
+<br>
 <a href='http://localhost:3000/teams/new' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>New team</a>
 <br>
 <br>
