Editing on assosiactions

--- a/app/views/divisions/_division.html.erb
+++ b/app/views/divisions/_division.html.erb
@@ -16,7 +16,7 @@
 
   <p>
     <strong>Manager:</strong>
-    <%= division.manager %>
+    <%= Employee.find(division.manager).name%>
   </p>
 
 </div>
