--- a/app/views/employees/_form.html.erb
+++ b/app/views/employees/_form.html.erb
@@ -35,7 +35,13 @@
     <%= form.label :employment_status, style: "display: block" %>
     <%= form.text_field :employment_status %>
   </div>
-
+  <br>
+  <br>
+  <div class="form-group m-0 col-md-6">   
+    <%= form.label :team_id , class:"text-left"%> 
+    <%= form.select :team_id, Team.all.collect { |p| [ p.name, p.id ] } %>
+  </div>
+  <br>
   <div>
     <%= form.submit %>
   </div>
