--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -39,7 +39,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 </head>
 
 <!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
+<div class="w3-main" style="margin-left:100px">
 
 
   <!-- Header -->
@@ -59,6 +59,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <th>Job</th>
     <th>Salary</th>
     <th>Employment Status</th>
+    <th>Team Name</th>
     <th>Show Individual</th>
   </tr>
 
@@ -72,6 +73,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <td><%= employee.job %></td>
     <td><%= employee.salary %></td>
     <td><%= employee.employment_status %></td>
+    <td><%= Team.find(employee.team_id).name %></td>
     <td>
     <p>
       <%= link_to "Show this employee", employee %>
