--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,6 @@
 <div id="<%= dom_id user %>">
+
+  <%= image_tag user.image ,style: "max-width: 250px;"%> 
   <p>
     <strong style="color : Red">Name:</strong>
     <%= user.name %>
