--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -11,12 +11,19 @@
 
   <p>
     <strong>Members:</strong>
-    <%= team.members %>
+    <%x=2%>
+    <%while x<team.members.length%>
+      <%= Employee.find(team.members[x].to_i).name %> 
+      <% x = x+5%>
+      <%if x<team.members.length%>
+        -
+      <%end%>
+    <%end%>
   </p>
 
   <p>
     <strong>Team lead:</strong>
-    <%= team.team_lead %>
+    <%= Employee.find( team.team_lead).name %>
   </p>
 
 </div>
