--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,7 +41,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:100px">
-
+<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
 
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
