--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -14,10 +14,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 
 <% if user_signed_in?%>
-  <a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
+  <a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
 <%else%>
-  <a href='http://localhost:3000/users/sign_up' class="w3-button w3-white w3-padding-2"></i>SignUP</a>
-  <a href='http://localhost:3000/users/sign_in' class="w3-button w3-white w3-padding-2"></i>Log In</a>
+  <a href='http://localhost:3000/users/sign_up' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signup' %></a>
+  <a href='http://localhost:3000/users/sign_in' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signin' %></a>
 <%end%>
 
 <!-- !PAGE CONTENT! -->
@@ -27,21 +27,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
     <div class="w3-container">
-    <h1><b>Welcome to HR Employee administration system</b></h1>
+    <h1><b><%= t 'hello' %></b></h1>
     <div class="w3-section w3-bottombar w3-padding-16">
-       <a href='http://localhost:3000/users' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>Users</a>
+       <a href='http://localhost:3000/users' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'users.index.users' %></a>
       <br>
       <br>
-      <a href='http://localhost:3000/employees' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>Employees</a>
+      <a href='http://localhost:3000/employees' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'employee.index.emp' %></a>
       <br>
       <br>
-      <a href='http://localhost:3000/missions' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>Target</a>
+      <a href='http://localhost:3000/missions' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'target.index.target' %></a>
       <br>
       <br>
-      <a href='http://localhost:3000/divisions' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>Divisions</a>
+      <a href='http://localhost:3000/divisions' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'division.index.division' %></a>
       <br>
       <br>
-      <a href='http://localhost:3000/teams' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>Teams</a>
+      <a href='http://localhost:3000/teams' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'team.index.teams' %></a>
     </div>
     </div>
     
