--- a/app/views/missions/show.html.erb
+++ b/app/views/missions/show.html.erb
@@ -13,20 +13,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
+<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
 
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
     <div class="w3-container">
-    <h1><b>Showing Target</b></h1>
+    <h1><b><%= t 'target.index.Show this target' %></b></h1>
 <p style="color: green"><%= notice %></p>
 
 <%= render @mission %>
 
 <div>
-  <%= link_to "Edit this mission", edit_mission_path(@mission) %> 
+  <%= link_to I18n.t('button.edit'), edit_mission_path(@mission) %> 
   <br>
-  <%= link_to "Back to missions", missions_path %>
+  <%= link_to I18n.t('button.back'), missions_path %>
 
-  <%= button_to "Destroy this mission", @mission, method: :delete %>
+  <%= button_to I18n.t('button.delete'), @mission, method: :delete %>
 </div>
