--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -26,14 +26,14 @@
     <%# <%= form.text_field :members %> 
 
   <div>
-    <%= form.label :members , style: "display: block" %>    
+    <%= form.label I18n.t('team.index.members') , style: "display: block" %>    
     <%= form.select :members, Employee.all.collect{ |emp| [emp.name,emp.id] },{:include_hidden => false},{ :multiple => true} %>
   </div>
 
  
 
   <div class="form-group m-0 col-md-6">   
-    <%= form.label :team_lead , class:"text-left"%> 
+    <%= form.label I18n.t('team.index.team_lead') , class:"text-left"%> 
     <%= form.select :team_lead , Employee.all.collect { |p| [ p.name, p.id ] } %>
   </div>
 
