--- a/app/views/teams/_team.html.erb
+++ b/app/views/teams/_team.html.erb
@@ -1,16 +1,16 @@
 <div id="<%= dom_id team %>">
   <p>
-    <strong style="color : Red">Name:</strong>
+    <strong style="color : Red"><%= t 'team.index.name' %>:</strong>
     <%= team.name %>
   </p>
 
   <p>
-    <strong>Description:</strong>
+    <strong><%= t 'team.index.description' %>:</strong>
     <%= team.description %>
   </p>
 
   <p>
-    <strong>Members:</strong>
+    <strong><%= t 'team.index.members' %>:</strong>
     <%x=2%>
     <%while x<team.members.length%>
       <%= Employee.find(team.members[x].to_i).name %> 
@@ -22,7 +22,7 @@
   </p>
 
   <p>
-    <strong>Team lead:</strong>
+    <strong><%= t 'team.index.team_lead' %>:</strong>
     <%= Employee.find( team.team_lead).name %>
   </p>
 
