--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -15,16 +15,16 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
 
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
+<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%=t 'button.signout'%></a>
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
     <div class="w3-container">
-    <h1><b>New Team</b></h1>
+    <h1><b><%=t 'team.index.NewTeam'%></b></h1>
 
 <%= render "form", team: @team %>
 
 <br>
 
 <div>
-  <%= link_to "Back to teams", teams_path %>
+  <%= link_to I18n.t('button.back'), teams_path %>
 </div>
