--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,17 +2,17 @@
 
   <%= image_tag user.image ,style: "max-width: 250px;"%> 
   <p>
-    <strong style="color : Red">Name:</strong>
+    <strong style="color : Red"><%= t 'users.index.Name' %>:</strong>
     <%= user.name %>
   </p>
 
   <p>
-    <strong>Email:</strong>
+    <strong><%= t 'users.index.Email' %>:</strong>
     <%= user.email %>
   </p>
 
   <p>
-    <strong>Password:</strong>
+    <strong><%= t 'users.index.Password'%>:</strong>
     <%= user.password %>
   </p>
 
