--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -41,12 +41,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:100px">
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
+<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
 
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
     <div class="w3-container">
-    <h1><b>Users</b></h1>
+    <h1><b><%= t 'users.index.users' %></b></h1>
 <p style="color: green"><%= notice %></p>
 
 
@@ -55,11 +55,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <div id="users">
 <table id="userTable">
   <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th>E-mail</th>
-    <th>Password</th>
-    <th>Show Individual</th>
+    <th><%= t 'users.index.ID'%></th>
+    <th><%= t 'users.index.Name'%></th>
+    <th><%= t 'users.index.Email'%></th>
+    <th><%= t 'users.index.Password'%></th>
+    <th><%= t 'users.index.Show Individual'%></th>
   </tr>
 
   <% @users = User.all%>
@@ -72,7 +72,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <td><%= user.password %></td>
     <td>
     <p>
-      <%= link_to "Show this user", user %>
+      <%= link_to I18n.t('users.index.Show this user'), user %>
     </p>
     </td>
     </tr>
@@ -81,7 +81,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </table>
 </div>
 <br>
-<a href='http://localhost:3000/users/new' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>New user</a>
+<a href='http://localhost:3000/users/new' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'button.newuser'%></a>
 <br>
 <br>
-<a href='http://localhost:3000' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i>Back to main Form</a>
+<a href='http://localhost:3000' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'button.back'%></a>
