--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -14,12 +14,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
+<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
 
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
     <div class="w3-container">
-    <h1><b>New User</b></h1>
+    <h1><b><%= t 'users.index.NewUser'%></b></h1>
 <p style="color: green"><%= notice %></p>
 
 
@@ -28,6 +28,6 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 <br>
 
 <div>
-  <%= link_to "Back to users", users_path %>
+  <%= link_to I18n.t('button.back'), users_path %>
 </div>
 
