--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,21 +13,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i>SignOut</a>
+<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
 
   <!-- Header -->
   <header id="Welcome to HR Employee administration system ">
     <div class="w3-container">
-    <h1><b>Showing User</b></h1>
+    <h1><b><%= t 'users.index.Showing User' %></b></h1>
 <p style="color: green"><%= notice %></p>
 
 
 <%= render @user %>
 
 <div>
-  <%= link_to "Edit this user", edit_user_path(@user) %> 
+  <%= link_to I18n.t('button.edit'), edit_user_path(@user) %> 
   <br>
-  <%= link_to "Back to users", users_path %>
+  <%= link_to I18n.t('button.back'), users_path %>
 
-  <%= button_to "Destroy this user", @user, method: :delete %>
+  <%= button_to I18n.t('button.delete'), @user, method: :delete %>
 </div>
