--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -46,4 +46,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     
   </header>
+
+  <footer>
+   <div >
+          <a href="?locale=en" class="w3-button w3-white w3-padding-2"><i class="fa fa-diamond w3-margin-right"></i>English</a>
+          <a href="?locale=ar"  class="w3-button w3-white w3-padding-2"><i class="fa fa-diamond w3-margin-right"></i>العربيه</a>
+    </div>
+  </footer>
   
