--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,56 +1,86 @@
 <!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
+<html lang="en">
 
-</style>
-<body class="w3-light-grey w3-content" style="max-width:1600px">
+<head>
+    <title>Bootstrap 4 Example</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <style>
+        .jumbotron {
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+            margin: 0;
+        }
+        body
+        {
+          font-family: 'Bree Serif', serif;
+        }
+        .for_list
+        {
+          height: 123.5px;
+          margin:0;
+          padding:0;
+        }
+        .for_list:active
+        {
+          background-color:#343A40;
+          color:#c1d2db
+        }
+    </style>
+</head>
 
-
-<% if user_signed_in?%>
-  <a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
-<%else%>
-  <a href='http://localhost:3000/users/sign_up' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signup' %></a>
-  <a href='http://localhost:3000/users/sign_in' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signin' %></a>
-<%end%>
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
-
-
-  <!-- Header -->
-  <header id="Welcome to HR Employee administration system ">
-    <div class="w3-container">
-    <h1><b><%= t 'hello' %></b></h1>
-    <div class="w3-section w3-bottombar w3-padding-16">
-       <a href='http://localhost:3000/users' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'users.index.users' %></a>
-      <br>
-      <br>
-      <a href='http://localhost:3000/employees' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'employee.index.emp' %></a>
-      <br>
-      <br>
-      <a href='http://localhost:3000/missions' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'target.index.target' %></a>
-      <br>
-      <br>
-      <a href='http://localhost:3000/divisions' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'division.index.division' %></a>
-      <br>
-      <br>
-      <a href='http://localhost:3000/teams' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'team.index.teams' %></a>
-    </div>
+<body>
+    <!-- Grey with black text -->
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="assets\hr.png" width="70" height="70">
+            </a>
+            <h3 class="text-light m-auto"><%= t 'hello' %></h3>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                  <% if user_signed_in?%>
+                    <a href='http://localhost:3000/users/sign_out' class="btn btn-danger ml-3"></i><%= t 'button.signout' %></a>
+                  <%else%>
+                    <a href='http://localhost:3000/users/sign_up' class="btn btn-primary ml-3"></i><%= t 'button.signup' %></a>
+                    <a href='http://localhost:3000/users/sign_in' class="btn btn-primary ml-3"></i><%= t 'button.signin' %></a>
+                  <%end%>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <div class="row">
+    <div class="col-4">
+      <div class="list-group text-center">
+        <a href='http://localhost:3000/users'     class="list-group-item list-group-item-action h2 for_list py-5"><%= t 'users.index.users' %></a>
+        <a href='http://localhost:3000/employees' class="list-group-item list-group-item-action h2 for_list py-5"><%= t 'employee.index.emp' %></a>
+        <a href='http://localhost:3000/missions'  class="list-group-item list-group-item-action h2 for_list py-5"><%= t 'target.index.target' %></a>
+        <a href='http://localhost:3000/divisions' class="list-group-item list-group-item-action h2 for_list py-5"><%= t 'division.index.division' %></a>
+        <a href='http://localhost:3000/teams'     class="list-group-item list-group-item-action h2 for_list py-5"><%= t 'team.index.teams' %></a>
+      </div>
     </div>
     
-  </header>
-
-  <footer>
-   <div >
-          <a href="?locale=en" class="w3-button w3-white w3-padding-2"><i class="fa fa-diamond w3-margin-right"></i>English</a>
-          <a href="?locale=ar"  class="w3-button w3-white w3-padding-2"><i class="fa fa-diamond w3-margin-right"></i>العربيه</a>
     </div>
-  </footer>
+    </div>
+  </body>
   
+
+
+    <footer>
+      <div class="jumbotron text-center">
+          <p class="lead ml-auto">Copyright @ 2022 - Sprints - Author:Abdelrahman Mohamed, E-mail:abdelrahman.muhamedd@gmail.com</p>
+          <div>
+                  <a href="?locale=en" class="ml-5"></i>English</a>
+                  <a href="?locale=ar" class="ml-5"></i>العربيه</a>
+          </div>
+      </div>
+  </footer>
+ 
