--- a/app/views/employees/new.html.erb
+++ b/app/views/employees/new.html.erb
@@ -1,33 +1,10 @@
 
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-</style>
-<body class="w3-light-grey w3-content" style="max-width:1600px">
-
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:300px">
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
-
-  <!-- Header -->
-  <header id="Welcome to HR Employee administration system ">
-    <div class="w3-container">
     <h1><b><%= t 'employee.index.New Emp'%></b></h1>
-    
-<p style="color: green"><%= notice %></p>
 
 <%= render "form", employee: @employee %>
 
 <br>
 
 <div>
-  <%= link_to I18n.t('button.back'), employees_path %>
+  <%= link_to I18n.t('button.back'), employees_path, class: "btn btn-primary p-1 py-0" %>
 </div>
