--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,87 +1,42 @@
-<!DOCTYPE html>
-<html>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
-</style>
-<body class="w3-light-grey w3-content" style="max-width:2000px">
-
-<head>
-<style>
-#userTable {
-  font-family: "Raleway", "Raleway", sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-#userTable td, #userTable th {
-  border: 1.5px solid #ddd;
-  padding: 8px;
-}
-
-#userTable tr:nth-child(even){background-color: #f2f2f2;}
-
-#userTable tr:hover {background-color: #ddd;}
-
-#userTable th {
-  padding-top: 12px;
-  padding-bottom: 12px;
-  text-align: left;
-  background-color: #1A1A1A;
-  color: white;
-}
-</style>
-</head>
-
-
-<!-- !PAGE CONTENT! -->
-<div class="w3-main" style="margin-left:100px">
-<a href='http://localhost:3000/users/sign_out' class="w3-button w3-white w3-padding-2"></i><%= t 'button.signout' %></a>
-
-  <!-- Header -->
-  <header id="Welcome to HR Employee administration system ">
-    <div class="w3-container">
+<div class="container">
     <h1><b><%= t 'users.index.users' %></b></h1>
-<p style="color: green"><%= notice %></p>
-
-
-
-
-<div id="users">
-<table id="userTable">
-  <tr>
-    <th><%= t 'users.index.ID'%></th>
-    <th><%= t 'users.index.Name'%></th>
-    <th><%= t 'users.index.Email'%></th>
-    <th><%= t 'users.index.Password'%></th>
-    <th><%= t 'users.index.Show Individual'%></th>
-  </tr>
-
-  <% @users = User.all%>
-
-  <% @users.each do |user| %>
-    <tr>
-    <td><%= user.id %></td>
-    <td><%= user.name %></td>
-    <td><%= user.email %></td>
-    <td><%= user.password %></td>
-    <td>
-    <p>
-      <%= link_to I18n.t('users.index.Show this user'), user %>
-    </p>
-    </td>
-    </tr>
-    
-  <% end %>
-  </table>
+    <a href='http://localhost:3000/users/new' class="btn btn-primary pull-right"><%= t 'button.newuser'%></a>
+    <a href='http://localhost:3000' class="btn btn-success"><%= t 'button.back'%></a>
 </div>
 <br>
-<a href='http://localhost:3000/users/new' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'button.newuser'%></a>
-<br>
-<br>
-<a href='http://localhost:3000' class="w3-button w3-white w3-padding-32"><i class="fa fa-diamond w3-margin-right"></i><%= t 'button.back'%></a>
+<div class="table-wrapper-scroll-y my-custom-scrollbar" style="height: 525px;overflow: scroll;">
+<table id="dtDynamicVerticalScrollExample" class="table table-striped table-bordered table-sm" cellspacing="0"
+  width="100%">
+      <caption>List of users</caption>
+      <thead>
+        <tr>
+        <th><%= t 'users.index.ID'%></th>
+        <th><%= t 'users.index.Name'%></th>
+        <th><%= t 'users.index.Email'%></th>
+        <th><%= t 'users.index.Password'%></th>
+        <th><%= t 'users.index.Show Individual'%></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @users = User.all%>
+        <% @users.each do |user| %>
+          <tr>
+          <td><%= user.id %></td>
+          <td><%= user.name %></td>
+          <td><%= user.email %></td>
+          <td><%= user.password %></td>
+          <td>
+          <p>
+          
+            <%= link_to I18n.t('users.index.Show this user'), user , class: "btn btn-primary p-1 py-0" %>
+            <%= button_to I18n.t('button.delete'),{ action: "destroy", id: user.id },
+                                method: :delete, data: { confirm: "Are you sure?" } ,
+                                class: "btn btn-danger p-1 py-0"%>
+          </p>
+          </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+
