ReadMe file modified

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets\hr.png" width="70" height="70">
+                <img src="assets\hr.png" width="70" height="70" alt="HR">
             </a>
             <h3 class="text-light m-auto"><%= t 'hello' %></h3>
             <ul class="navbar-nav ml-auto">
