--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,9 @@
 <div class="container">
     <h1><b><%= t 'users.index.users' %></b></h1>
-    <a href='http://localhost:3000/users/new' class="btn btn-primary pull-right"><%= t 'button.newuser'%></a>
-    <a href='http://localhost:3000' class="btn btn-success"><%= t 'button.back'%></a>
+    <%# <a href='http://localhost:3000/users/new' class="btn btn-primary pull-right"><%= t 'button.newuser'%>
+    <a href='http://localhost:3000' class="btn btn-success pull-right"><%= t 'button.back'%></a>
 </div>
+<br>
 <br>
 <div class="table-wrapper-scroll-y my-custom-scrollbar" style="height: 525px;overflow: scroll;">
 <table id="dtDynamicVerticalScrollExample" class="table table-striped table-bordered table-sm" cellspacing="0"
